Fix issue with image not showing in Firefox

--- a/apollo/assets/styles/sass/80-templates/_listing.scss
+++ b/apollo/assets/styles/sass/80-templates/_listing.scss
@@ -156,7 +156,7 @@
 
 		img {
 
-			max-width: rem(100);
+			width: rem(100);
 
 		}
 
